# Odoo-TransitOps

./: .gitignore  Demo_Video_Script.md  README.md
Code/: README.md
Code/Backend/: .env.example  README.md  create_db.py  database.py  main.py  models.py  pyproject.toml  schemas.py  setup_db.py  start.py
Code/Backend/routers/: auth.py  dashboard.py  documents.py  drivers.py  expenses.py  fuel.py  maintenance.py  reports.py  trips.py  vehicles.py
Code/Backend/tests/: conftest.py  test_auth.py  test_bonus.py  test_dashboard.py  test_drivers.py  test_maintenance_fuel_expenses.py  test_trips.py  test_vehicles.py
Code/Frontend/: .gitkeep  README.md  index.html  package.json  tailwind.config.js
Code/Frontend/src/: App.jsx  index.css
Code/Frontend/src/api/: client.js
Code/Frontend/src/components/: Button.jsx  Checkbox.jsx  ConfirmationDialog.jsx  EmptyState.jsx  Input.jsx  KpiCard.jsx  LifecycleStepper.jsx  Modal.jsx  NotificationCenter.jsx  Pagination.jsx  Panel.jsx  RuleCallout.jsx  SearchBar.jsx  Select.jsx  SkeletonLoader.jsx  StatusTag.jsx  Table.jsx  Textarea.jsx
Code/Frontend/src/constants/: navigation.js  roles.js  statuses.js
Code/Frontend/src/context/: AuthContext.jsx  RBACContext.jsx
Code/Frontend/src/data/: mockData.js
Code/Frontend/src/features/analytics/: Analytics.jsx
Code/Frontend/src/features/auth/: Login.jsx
Code/Frontend/src/features/dashboard/: Dashboard.jsx
Code/Frontend/src/hooks/: usePagination.js  useSortableData.js
Code/Frontend/src/layouts/: PageShell.jsx  Sidebar.jsx  Topbar.jsx
Code/Frontend/src/utils/: formatters.js
(+6 files in other folders)
